--- a/vignettes/4. intra media processes or partitioning/HeteroAglomeration.Rmd
+++ b/vignettes/4. intra media processes or partitioning/HeteroAglomeration.Rmd
@@ -5,7 +5,6 @@ editor_options:
   chunk_output_type: console
 ---
 
-
 ```{r}
 substance <- "nAg_10nm"
 source("baseScripts/initTestWorld.R")
@@ -18,17 +17,31 @@ This is a particulate process which only applies to Solid species and the transf
 
 There are three different aproaches applied here depending on the matrix where this process takes place and the species affected.
 
-The three approaches are based on:
-- Smoluchowski's colloid theory (water, soil/sediment pore water)
-- Filtration theory for porous matrices (soil and sediment)
-- Aerosol agglomeration approaches (air)
+The three approaches are based on: - Smoluchowski's colloid theory (water, soil/sediment pore water) - Filtration theory for porous matrices (soil and sediment) - Aerosol agglomeration approaches (air)
 
 ### Heteroagglomeration in water
-This plays are role for the transformation from the primary particulate species and their agglomeration with natural colloids < 450 nm in water, soil and sediment pore water. Also agglomeration with larger SPM (>450 nm) in water.
 
-The data required for calculating for instance the collision frequency is related to the particle number concentration of natural colloids present in the compartment. For this we use the per subcompartment defined characteristics of the natural particles: 'RadCOL', 'RadCP', 'RhoCOL' and 'RhoCP'. For aerosols the Accumulation mode corresponds to COL and Coarse Mode corresponds to CP characteristics. [TO DO* rework input of Aerosol concentrations into mass concentrations instead of number concentrations as they are now for COL and SUSP, add Nucc concentrations in CONSTANTS just like their Rad and Rho properties]
+This plays are role for the transformation from the primary particulate species and their agglomeration with natural colloids \< 450 nm in water, soil and sediment pore water. Also agglomeration with larger SPM (\>450 nm) in water.
 
-Potentially we can integrate air also in one algorithm, alhough it will be a big one... 
+The data required for calculating for instance the collision frequency is related to the particle number concentration of natural colloids present in the compartment. For this we use the per subcompartment defined characteristics of the natural particles: 'RadCOL', 'RadCP', 'RhoCOL' and 'RhoCP'. For aerosols the Accumulation mode corresponds to COL and Coarse Mode corresponds to CP characteristics.
+
+The heteroaggregation rate constant is calculated using (k_HeteroAgglomeration.wsd.R). This depends on the following variables:
+
+1.  rad_species: this calculates the radius of the heteroagglomerate consisting of the solid particle and the Small or Large natural particle.
+
+2.  rho_species: this calculates the density of the he heteroagglomerate consisting of the solid particle and the Small or Large natural particle.
+
+Furthermore there are several helper functions used to avoid repeating code and too complex variables:
+
+-   f_Inter
+
+-   f_Brown
+
+-   f_Grav
+
+-   f_NumConc
+
+-   f_SetVelWater
 
 ```{r w.Heteroglomeration}
 # for after editting data
@@ -66,8 +79,8 @@ World$CalcVar("rad_species")
 World$NewCalcVariable("rho_species")
 (World$CalcVar("rho_species"))
 
-World$NewCalcVariable("SettlingVelocity")
-World$CalcVar("SettlingVelocity")
+# World$NewCalcVariable("SettlingVelocity")
+# World$CalcVar("SettlingVelocity")
 
 
 World$fetchData("SettlingVelocity")
@@ -80,7 +93,6 @@ World$fetchData("SpeciesName") # supposed to be in multiple tables?
 
 
 ```
-
 
 ```{r}
 World$FromDataAndTo("k_HeteroAgglomeration.wsd")
@@ -95,3 +107,6 @@ debugonce(k_HeteroAgglomeration.wsd)
 debug(testProc$execute())
 ```
 
+[TO DO\* rework input of Aerosol concentrations into mass concentrations instead of number concentrations as they are now for COL and SUSP, and consider Nucc concentrations in CONSTANTS just like their Rad and Rho properties]
+
+Potentially we can integrate air also in one algorithm, alhough it will be a big one...
