--- a/vignettes/5.4 Advection.Rmd
+++ b/vignettes/5.4 Advection.Rmd
@@ -1,8 +1,12 @@
 ---
-title: "Air Flow"
-author: "JS"
-date: "3/31/2022"
+title: "Advection"
+author: "Jaap Slootweg, Joris Quik"
+date: "17-11-2023"
 output: github_document
+editor_options: 
+  chunk_output_type: console
+  markdown: 
+    wrap: 72
 ---
 
 ```{r setup, include=FALSE}
@@ -12,22 +16,22 @@ projectRoot <- paste(getwd(), "..", sep = "/")
 knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
 ```
 
-## A flow in SBOO
+# Advection
 
-This vignette demonstrates the implementation of a "flow". A flow in the context of SB is the massflow of a matrix (air, water, ) from one box to another, where either the subcompartment or scale is different. This flow is calculated for a process, usually and by default "Advection". The airflow is a nice example how to model and use flows.
+This vignette demonstrates the implementation of the advective flows of
+air and water in SimpleBox (SB). An advective flow in the context of SB
+is the massflow of a matrix (air, water, ) from one box to another,
+where either the subcompartment or scale is different.
 
-## Initialise 
-
-We use a special script to initialize SB, creating two objects, the first we will use is named "World". When we print it, we see the methods (functions) and properties (active binding), divided in a public and a private part.
-
-```{r}
+```{r initialize}
 source("baseScripts/initTestWorld.R")
 World
 ```
 
-## World
+## Data and variables
 
-The object named World is of the class SBcore, which is the most imported in use. Other objects are often made part of SBCore objects. Before calculating we need some variables. If you want to read more about variables (in the context of SBOO) read the vignette "FirstVars"
+For calculating the rate constants for advection there is data needed
+on: - Windspeed Together with the variables: -
 
 ```{r}
 SBvars <- c("AreaLand",
@@ -42,31 +46,107 @@ for (x in SBvars) {
 }
 ```
 
-We calculate AirFlow in two steps. The first is the application of a simple model of air circulation depending on windspeed; The mean residence time in the region is according the fTAU function. The AirFlow function calculates the amount that would enter/leave the region namely the volume divided by the residence time. Notice that fTAU is a normal function, but AirFlow will be used as a variable defining function. After the call to World\$CalcVar("AirFlow") this property is stored in the data within World.
+## Air flow
+
+We calculate AirFlow in two steps. The first is the application of a
+simple model of air circulation depending on windspeed; The mean
+residence time in the region is according the f_TAU function. `r f_TAU`
+The AirFlow function calculates the amount that would enter/leave the
+region namely the volume divided by the residence time. Notice that
+f_TAU is a normal function, but AirFlow will be used as a variable
+defining function. After the call to World\$CalcVar("AirFlow") this
+property is stored in the data within World. `r AirFlow`. This provides
+the overal airflow within a compartment which affects the flow from this
+compartment or scale to the next. Currently air only flows between
+scales.
 
 ```{r}
-fTAU
-AirFlow
+World$fetchData("Volume")
+World$fetchData("Area")
+World$fetchData("WINDspeed")
+World$fetchData("SubCompartName")
+# f_TAU
+# AirFlow
 World$NewCalcVariable("AirFlow")
 World$CalcVar("AirFlow")
 ```
 
-## But
+### flow mass balance
 
-this would not guarantee that the amount from one scale to the next would equal the amount flowing the opposite way! To honour the mass balance we give priority to the amount calculated for the smallest volume to calculate the actual flows. For nested scales we need to know how the nesting is. This brings a new challange; we need to know properties of the scale the flow is going to, or possibly the scale ehere it is going to. Because of the nesting, we need to know even properties of scale not directly related to the to- or the from scale! In this example we see use of the "to.", the "from." and the "all." preposition. The to- and from scaleName are atomic (a single string) but the "all." prepositions provides a full table of the variable and its dimensions (in this case only scale). If you want to see what is really going on in the function calls you can use the debug parameter. This debugging is not availeable for (the whole) World; use the (silent) return value of World\$New[Variable\|Flow\|Process] ! After the r section below you can enter at the console prompt of R-studio: AdvAir\$execute(debugAt = list(toScale = "Continental"))
+To keep the mass balance in the model the amount from one scale to the
+next would need to be equal to the amount flowing the opposite way! To
+honor the mass balance we give priority to the amount calculated for the
+smallest volume to calculate the actual flows. This means that for
+nested scales we need to know how the nesting is. This brings a new
+challange; we need to know properties of the scale the flow is going to,
+or possibly the scale where it is coming from. Because of the nesting,
+we need to know even properties of scale not directly related to the to-
+or from- the scale! To accomodate this use of the "to.", the "from." and
+the "all." preposition is made available. The to- and from scaleName are
+atomic (a single string) but the "all." prepositions provides a full
+table of the variable and its dimensions (in this case only accross
+Scales). If you want to see what is really going on in the function
+calls you can use the debug parameter. See the Debugging vignette for
+further information.
 
 ```{r}
 x_Advection_Air
 AdvAir <- World$NewFlow("x_Advection_Air")
 #AdvAir$execute(debugAt = list(toScale = "Continental"))
 World$CalcVar("x_Advection_Air")
+
 ```
 
-Does it add up?
+This provides the air flows. To test if they add up and give the same
+amount flowing to and from each scale we do the following calculation:
 
 ```{r}
 AirFlows <- World$fetchData("x_Advection_Air")
 ToFlow <- aggregate(flow~toScale, data = AirFlows, FUN = sum)
 FromFlow <- aggregate(flow~fromScale, data = AirFlows, FUN = sum)
-merge(FromFlow, ToFlow, by.x = "fromScale", by.y = "toScale")
+merge(FromFlow, ToFlow, by.x = "fromScale", by.y = "toScale", suffixes = c("_from", "_to"))
 ```
+
+## Water flow
+
+For water the flows are relevant for different dimensions:
+subcompartments and scale. This relates to water flowing from lake,
+through the river compartment to the sea. And the sea flows between
+scales. This is defined in the following x_flow algorithms for water
+advection:
+
+1.   x_RiverSeaScales
+
+2.  x_RiverDischarge
+
+3.  x_LakeOutflow
+
+4.  x_ContSea2Reg
+
+5.  x_ContSea2Moder
+
+6.  x_ContRiver2Reg
+
+7.  x_RegSea2Cont
+
+8.  x_RiverSeaScales
+
+```{r}
+x_Advection_Air
+AdvAir <- World$NewFlow("x_Advection_Air")
+#AdvAir$execute(debugAt = list(toScale = "Continental"))
+World$CalcVar("x_Advection_Air")
+
+```
+
+This provides the air flows. To test if they add up and give the same
+amount flowing to and from each scale we do the following calculation:
+
+```{r}
+AirFlows <- World$fetchData("x_Advection_Air")
+ToFlow <- aggregate(flow~toScale, data = AirFlows, FUN = sum)
+FromFlow <- aggregate(flow~fromScale, data = AirFlows, FUN = sum)
+merge(FromFlow, ToFlow, by.x = "fromScale", by.y = "toScale", suffixes = c("_from", "_to"))
+```
+
+## Advection rate constant
