--- a/vignettes/5.4 Advection.Rmd
+++ b/vignettes/5.4 Advection.Rmd
@@ -237,6 +237,96 @@ World$CalcVar("x_ToModerateWater")
 
 ```
 
+### Water flow from Moderate Scale
+
+#### 7. x_FromModerate2TropWater
+
+Seperated in different flows based on the to Scale
+
+```{r}
+
+World$fetchData("Volume")
+World$fetchData("TAUsea")
+World$fetchData("OceanCurrent")
+World$fetchData("x_RegSea2Cont")
+World$fetchData("ScaleName")
+
+flow <- World$NewFlow("x_FromModerate2TropWater")
+# flow$execute(debugAt = list())
+flow$FromAndTo
+flow$execute()
+World$CalcVar("x_FromModerate2TropWater")
+```
+
+#### 8. x_FromModerate2ArctWater
+
+```{r}
+World$fetchData("OceanCurrent")
+World$fetchData("ScaleName")
+
+flow <- World$NewFlow("x_FromModerate2ArctWater")
+# flow$execute(debugAt = list())
+flow$FromAndTo
+flow$execute()
+World$CalcVar("x_FromModerate2ArctWater")
+```
+
+#### 9. x_FromModerate2ContWater
+
+```{r}
+
+x_FromModerateWater
+
+World$fetchData("Volume")
+World$fetchData("TAUsea")
+World$fetchData("OceanCurrent")
+World$fetchData("x_RegSea2Cont")
+World$fetchData("ScaleName")
+
+flow <- World$NewFlow("x_FromModerate2ContWater")
+# flow$execute(debugAt = list())
+flow$FromAndTo
+flow$execute()
+World$CalcVar("x_FromModerate2ContWater")
+```
+
+### 10. x_OceanMixing2Deep
+
+```{r}
+x_OceanMixing2Deep
+
+World$fetchData("Volume")
+World$fetchData("TAUsea")
+World$fetchData("OceanCurrent")
+World$fetchData("SubCompartName")
+
+flow <- World$NewFlow("x_OceanMixing2Deep")
+
+flow$FromAndTo
+flow$execute()
+World$CalcVar("x_OceanMixing2Deep")
+
+```
+
+### 11. x_OceanMixing2Sea
+
+```{r}
+x_OceanMixing2Sea
+
+World$fetchData("Volume")
+World$fetchData("TAUsea")
+World$fetchData("OceanCurrent")
+World$fetchData("SubCompartName")
+
+flow <- World$NewFlow("x_OceanMixing2Sea")
+
+flow$FromAndTo
+flow$execute()
+World$CalcVar("x_OceanMixing2Sea")
+```
+
+### Overview of water flows
+
 Overview of flows included above (excludes surface - deep ocean mixing
 and ocean currents at global scales)
 
@@ -257,63 +347,6 @@ flux2Test$frows <- do.call(paste, c(flux2Test[c("toScale", "toSubCompart")], sep
 
 pivot_wider(flux2Test[f2Torder,c("frows","fcolumns","flow")],
             id_cols = frows, names_from = fcolumns, values_from = flow)
-```
-
-### 7. x_FromModerateWater [fix needed]
-
-NOT WORKING YET
-
-```{r}
-
-x_FromModerateWater
-
-World$fetchData("Volume")
-World$fetchData("TAUsea")
-World$fetchData("OceanCurrent")
-World$fetchData("x_RegSea2Cont")
-
-flow <- World$NewFlow("x_FromModerateWater")
-
-flow$FromAndTo
-flow$execute()
-World$CalcVar("x_FromModerateWater")
-```
-
-### x_OceanMixing [fix needed]
-
-NOT WORKING YET
-
-```{r}
-
-World$fetchData("Volume")
-World$fetchData("TAUsea")
-World$fetchData("OceanCurrent")
-World$fetchData("SubCompartName")
-
-flow <- World$NewFlow("x_OceanMixing")
-
-flow$FromAndTo
-flow$execute()
-World$CalcVar("x_OceanMixing")
-
-```
-
-```{r}
-
-
-
-
-```
-
-This provides the air flows. To test if they add up and give the same
-amount flowing to and from each scale we do the following calculation:
-
-```{r}
-# Example for airflow above
-AirFlows <- World$fetchData("x_Advection_Air")
-ToFlow <- aggregate(flow~toScale, data = AirFlows, FUN = sum)
-FromFlow <- aggregate(flow~fromScale, data = AirFlows, FUN = sum)
-merge(FromFlow, ToFlow, by.x = "fromScale", by.y = "toScale", suffixes = c("_from", "_to"))
 ```
 
 ## Advection rate constant
